--- a/git-test1/.settings/org.eclipse.wst.common.component
+++ b/git-test1/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="employees1">
+    <wb-module deploy-name="employees">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/employees1/build/classes"/>
-        <property name="context-root" value="employees1"/>
+        <property name="java-output-path" value="/employees/build/classes"/>
+        <property name="context-root" value="employees"/>
     </wb-module>
 </project-modules>
